--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
-<span class="ion-music-note"></span>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Bloc Jams</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
+        <link rel="stylesheet" type= "text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="styles/landing.css">
+        
+    </head>
+
+    <body class="landing">
+        <nav class="navbar"><!-- navigation bar -->
+        <a href="index.html" class="logo">
+            <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo"/>
+        </a>
+        <div class="links-container">
+            <a href="collection.html" class="navbar-link">collection</a>
+        </div>
+        </nav>
+        <section class="hero-content"><!-- hero content -->
+        <h1 class="hero-title">Turn the music up!</h1>
+        </section>
+
+        <section class="selling-points container clearfix"><!-- selling points -->
+            <div class="point column third">
+                <span class="ion-music-note"></span>
                 <h5 class="point-title">Choose your music</h5>
                 <p class="point-description">The world is full of music; why should you have to listen to music that someone else chose?</p>
             </div>
