--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/landing.css">
-        
+
     </head>
 
     <body class="landing">
@@ -42,5 +42,6 @@
             </div>
         </section>
 
+        <script src="scripts/landing.js"></script>
     </body>
 </html>
