--- a/album.html
+++ b/album.html
@@ -13,7 +13,7 @@
         <nav class="navbar"><!-- nav bar -->
             <a href="index.html" class="logo">
                  <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
-            </a> 
+            </a>
             <div class="links-container">
                 <a href="collection.html" class="navbar-link">collection</a>
             </div>
@@ -23,7 +23,7 @@
             <section class="clearfix">
             <div class="column half">
                 <img src="assets/images/album_covers/01.png" class="album-cover-art">
-            </div> 
+            </div>
             <div class="album-view-details column half">
                 <h2 class="album-view-title">The Colors</h2>
                 <h3 class="album-view-artist">Pablo Picasso</h3>
@@ -71,6 +71,7 @@
         </section>
 
         <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>
         <script src="scripts/fixtures.js"></script>
         <script src="scripts/album.js"></script>
     </body>
